# wolfpack

./: .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml
ci/: Dockerfile  Dockerfile-darling  Dockerfile-debian  Dockerfile-freebsd  Dockerfile-lib  Dockerfile-wine  apt.sh  build.sh  docker.sh  preamble.sh  publish.sh  runner.sh  test.sh
src/: lib.rs  main.rs
src/archive/: ar.rs  cpio.rs  mod.rs  read.rs  tar.rs  tar_archive.rs  write.rs
src/cargo/: arch.rs  config.rs  mod.rs  target.rs
src/compress/: any.rs  mod.rs
src/cpio/: mod.rs  odc.rs
src/deb/: arch.rs  basic_package.rs  constants.rs  control_data.rs  dependency.rs  error.rs  field_name.rs  field_value.rs  fields.rs  folded_value.rs  hashing_reader.rs  md5_sums.rs  mod.rs  multiline_value.rs  package.rs  package_name.rs  package_version.rs  packages.rs  release.rs  repository.rs  signer.rs  simple_value.rs  value.rs  version.rs
src/elf/: arch.rs  mod.rs  patch.rs  target.rs
src/error/: errors.rs
src/hash/: any.rs  hash_array.rs  hasher.rs  hashing_reader.rs  md5.rs  mod.rs  multi_hash.rs  sha1.rs  sha256.rs  sha512.rs  tests.rs
src/ipk/: arch.rs  mod.rs  package.rs  packages.rs  repository.rs  signer.rs
src/macos/: bom.rs  mod.rs  package.rs  package_info.rs  signer.rs
src/macros/: arch.rs  int_enum.rs  mod.rs  serde.rs  str_enum.rs
src/msix/: block_map.rs  content_types.rs  manifest.rs  mod.rs  package.rs
src/pkg/: der.rs  manifest.rs  mod.rs  package.rs  packages.rs  repository.rs  sha256_reader.rs  signer.rs
src/rpm/: arch.rs  entry.rs  header.rs  index_entry_kind.rs  mod.rs  package.rs  read.rs  repository.rs  signature_tag.rs  signer.rs  tag.rs  test.rs  value.rs
src/sign/: mod.rs  pgp.rs  read.rs  signer.rs  write.rs
src/test/: chars.rs  chars_db.rs  concurrency.rs  file.rs  hex.rs  mod.rs  parse.rs  pgp.rs
src/wolf/: arch.rs  metadata.rs  mod.rs
src/xar/: read.rs
