[package]
name = "wolfpack"
version = "0.1.0"
edition = "2021"

[dependencies]
#ksign = "0.2.0"
ar = "0.9.0"
async-trait = "0.1.84"
base16ct = { version = "0.2.0", features = ["std"] }
base64ct = { version = "1.6.0", features = ["std"] }
blake2b_simd = "1.0.2"
bzip2 = "0.4.4"
chrono = { version = "0.4.38", features = ["std"], default-features = false }
clap = { version = "4.5.20", features = ["derive"], default-features = true }
constant_time_eq = "0.3.1"
cpio = { version = "0.2.0", package = "kpea" }
crc = "3.2.1"
deko = "0.2.0"
der = { version = "0.7.9", features = ["std", "zeroize"], default-features = false }
elf = "0.7.4"
flate2 = "1.0.33"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
indicatif = "0.17.11"
ksign = { path = "../ksign" }
log = "0.4.22"
md5 = "0.7.0"
normalize-path = "0.2.1"
parking_lot = "0.12.3"
pgp = "0.14.0"
pkcs8 = { version = "0.10.2", features = ["std", "encryption"], default-features = false }
quick-xml = { version = "0.36.2", features = ["serialize"], default-features = false }
rand = "0.8.5"
rand_mt = "4.2.2"
reqwest = { version = "0.12.12", features = ["native-tls-vendored"] }
rusqlite = { version = "0.32.1", features = ["functions"] }
rusqlite_migration = "1.3.1"
secp256k1 = { version = "0.30.0", features = ["std", "rand", "global-context", "hashes"], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha1 = "0.10.6"
sha2 = "0.10.8"
similar-asserts = "1.6.1"
spki = "0.7.3"
sql_minifier = "0.1.5"
static_assertions = "1.1.0"
stuckliste = "0.3.7"
tar = { version = "0.4.42", features = [], default-features = false }
tempfile = "3.13.0"
thiserror = "1.0.64"
threadpool = "1.8.1"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
uname-rs = "0.1.1"
walkdir = "2.5.0"
xz = "0.1.0"
zar = "0.1.2"
zeroize = { version = "1.8.1", features = ["derive", "zeroize_derive"] }
zip = "2.2.0"
zstd = "0.13.2"

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive", "derive_arbitrary"] }
arbtest = "0.3.1"
gcollections = "1.5.0"
intervallum = "1.4.1"
lddtree = "0.3.5"
parking_lot = "0.12.3"
pretty-hex = "0.4.1"

[lints.clippy]
unwrap_used = "deny"
panic = "deny"
